--- a/style.css
+++ b/style.css
@@ -10,8 +10,48 @@ header nav{
 }
 
 main {
-    height: calc( 100vh - 100px - 50px);
+    height: calc( 100vh - 150px);
     width: 100%;
+}
+
+.form-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.151);
+    backdrop-filter: blur(2px);
+    
+}
+
+form {
+    position: relative;
+    width: 300px;
+    height: fit-content;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-80%) translateX(-50%);
+    z-index: 999;
+    background-color: rgb(168, 164, 164);
+    border-radius: 10px;
+    box-shadow: 0 0px 15px 8px rgb(0 0 0 / 19%),
+                inset 0 0px 15px 8px rgba(0, 0, 0, 0.226);
+    
+}
+
+.close-btn span{
+    cursor: pointer;
+}
+
+.form-control:focus {
+    border-color: transparent !important;
+    box-shadow: none !important;
+}
+
+.form-check-input {
+    border-color: transparent !important;
+    box-shadow: none !important;
 }
 
 footer {
