--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ header nav{
 }
 
 main {
-    height: calc( 100vh - 150px);
+    overflow: auto;
+    min-height: calc( 100vh - 150px);
     width: 100%;
 }
 
@@ -54,6 +55,78 @@ form {
     box-shadow: none !important;
 }
 
+#openForm {
+    background-color: rgb(190, 190, 190);
+}
+
+#openForm:hover {
+    background-color: rgb(212, 212, 212);
+    box-shadow: 0 0px 4px 1px rgba(168, 168, 168, 0.555),
+    inset 0 0px 5px 1px rgba(255, 255, 255, 0.555);
+    /* color:#FFF; */
+}
+
+#openForm:focus {
+    background-color: rgb(212, 212, 212);
+    box-shadow: 0 0px 4px 1px rgba(168, 168, 168, 0.555),
+    inset 0 0px 5px 1px rgba(255, 255, 255, 0.555);
+    outline: none !important;
+}
+
+
+
+.book-container {
+    width: calc(200px * 4);
+    margin:auto;
+}
+
+.book-card {
+    background-color: rgb(185, 184, 187);
+    height: 200px;
+    width: 180px;
+    margin: 10px;
+    border-radius: 4px;
+    box-shadow: inset 0 0px 15px 8px rgba(0, 0, 0, 0.226),
+                        0 0px 10px 3px rgba(0, 0, 0, 0.4);
+}
+
+.book-card {
+    word-break: keep-all;
+}
+
+.book-options {
+    margin-top: auto;
+}
+
+.delete:hover {
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+}
+
+.read-mark:hover {
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+}
+
 footer {
     height: 50px;
+}
+
+@media screen and (max-width: 800px) {
+    .book-container {
+        width: calc(200px * 3);
+    }
+}
+    
+
+@media screen and (max-width: 530px) {
+    .book-container {
+        width: calc(200px * 2);
+    }
+}
+
+@media screen and (max-width: 391px) {
+    .book-container {
+        width: calc(200px * 1);
+    }
 }
